<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="20"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/common_icon_search"
        android:showAsAction="ifRoom|collapseActionView"
        />

     <item
        android:id="@+id/action_write"
        android:title="@string/action_write"
        android:orderInCategory="30"
        android:actionProviderClass="com.androidleaf.actionbar.widget.MyActionProvider"
        android:icon="@drawable/icon_title_write"
        android:showAsAction="always"
        />
     
     <item
        android:id="@+id/action_settings"
        android:orderInCategory="40"
        android:title="@string/action_setting"
        android:icon="@drawable/user_icon_setting"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_send"
        android:orderInCategory="50"
        android:title="@string/action_send"
        android:icon="@drawable/title_icon_send"
        android:showAsAction="ifRoom"/>
     
</menu>
